Searchbox: Fixed broken disabled state and aligned styles with current XD styles

--- a/packages/office-ui-fabric-react/src/components/SearchBox/SearchBox.scss
+++ b/packages/office-ui-fabric-react/src/components/SearchBox/SearchBox.scss
@@ -17,7 +17,7 @@
   align-items: stretch;
   margin-bottom: 10px;
   @include padding(0, 0, 0, 8px);
-  border: 1px solid $ms-color-themeTertiary;
+  border: 1px solid $ms-color-neutralTertiary;
   height: 32px;
   @media screen and (-ms-high-contrast: active) {
     border: 1px solid $ms-color-white;
@@ -37,7 +37,7 @@
   width: 32px;
   text-align: center;
   transition: width $ms-animation-duration-1;
-  color: $ms-color-themePrimary;
+  color: $ms-color-themeDarkAlt;
 }
 
 .icon {
@@ -53,7 +53,7 @@
   font-weight: inherit;
   font-family: inherit;
   font-size: inherit;
-  color: $ms-color-black;
+  color: $ms-color-neutralPrimary;
   background-color: transparent;
   flex: 1 1 0px;
   overflow: hidden;
@@ -78,20 +78,20 @@
   color: $ms-color-themePrimary;
 }
 
-.root:hover {
-  border-color: $ms-color-themeDarker;
+.root:hover:not(.rootIsDisabled):not(.rootIsActive) {
+  border-color: $ms-color-neutralDark;
   .label {
     color: $ms-color-black;
 
     .iconContainer {
-      color:$ms-color-themeDarker;
+      color:$ms-color-themeDark;
     }
   }
 }
 
 // State: Active searchbox
 .rootIsActive {
-  border-color: $ms-color-themeDarker;
+  border-color: $ms-color-themePrimary;
 
   .iconContainer {
     width: 4px;
@@ -106,15 +106,14 @@
  // State: Disabled searchbox
 .rootIsDisabled {
   border-color: $ms-color-neutralLighter;
-
+  background-color: $ms-color-neutralLighter;
+  pointer-events: none;
+    cursor: default;
   .iconContainer {
     color: $ms-color-neutralTertiaryAlt;
   }
-
   .field {
-    background-color: $ms-color-neutralLighter;
-    pointer-events: none;
-    cursor: default;
+    color: $ms-color-neutralTertiaryAlt;
   }
 }
 
